--- a/client/package.json
+++ b/client/package.json
@@ -22,7 +22,7 @@
     "react-jwt": "^1.1.4",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "toastify": "^2.0.1",
+    "react-toastify": "^8.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
