--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "bitly-react": "^6.0.12",
     "bootstrap": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.7.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
