--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "multer": "^1.4.4",
