--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
+    "@phuocng/react-pdf-viewer": "^1.7.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -17,11 +18,13 @@
     "bootstrap": "^5.1.3",
     "jsonwebtoken": "^8.5.1",
     "nodemailer": "^6.7.2",
+    "pdfjs-dist": "^2.12.313",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
     "react-image-file-resizer": "^0.4.7",
     "react-jwt": "^1.1.4",
+    "react-pdf": "^5.7.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.1",
