--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-google-charts": "^4.0.0",
     "react-image-file-resizer": "^0.4.7",
     "react-jwt": "^1.1.4",
     "react-pdf": "^5.7.0",
