--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.3.0",
+    "@mui/lab": "^5.0.0-alpha.68",
     "@mui/material": "^5.3.0",
     "@phuocng/react-pdf-viewer": "^1.7.0",
     "@testing-library/jest-dom": "^5.16.1",
